# animate_images.user.js

./: .eslintrc.js  .gitignore  Makefile  README.md  formats.mjs  helpers_gif.c  helpers_webp.c  main.mjs  meson.build  meson_options.txt  package-lock.json  package.json  requirements.txt  script.mjs
.github/workflows/: release.yml
subprojects/: libnsgif.wrap  libwebp.wrap
subprojects/packagefiles/libnsgif/overlay/: meson.build
subprojects/packagefiles/libwebp/: expand-WEBP_REDUCE_SIZE-support.patch  fix-WEBP_REDUCE_SIZE-support.patch
subprojects/packagefiles/libwebp/overlay/: meson.build
test/: animate_images.user.js  formats.mjs  helpers.mjs  main.mjs  mimetypes  test.html  test.mjs
